UI imporved, display blogs feature done

--- a/index.html
+++ b/index.html
@@ -6,11 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                sage: '#E7F0DC',
+                sageGreenD: '#597445',
+                sageGreenM: '#658147',
+                sageGreenL: '#729762'
+              }
+            }
+          }
+        }
+      </script>
 </head>
-
 <body>
-    <div class="text-2xl text-red-300 pp">Hiii</div>
+    <div class="h-screen w-screen bg-sage">
+        <!-- Header section -->
+        <header class="h-14 w-full bg-sageGreenD flex items-center p-2">
+            <h2 class="text-2xl text-white uppercase font-bold">Insightful INK.</h2>
+        </header>
+        <!-- Add Blog section -->
+        <div class="h-fit w-full py-10 px-4">
+            <p class="h-fit w-full py-2 px-4 text-white text-lg uppercase font-semibold bg-sageGreenD rounded">Add Blog</p>
+            <div class="h-fit w-full flex flex-col gap-1 py-1">
+                <input class="h-11 w-full text-lg rounded px-4" type="text" placeholder="Enter title">
+                <input class="h-11 w-full text-lg rounded px-4" type="text" placeholder="Enter description">
+                <input class="h-11 w-full text-lg rounded px-4" type="text" placeholder="Enter author's name">
+                <button class="h-11 w-full text-lg text-white font-semibold bg-sageGreenD rounded hover:bg-sageGreenL" onclick="saveBlogs()">ADD</button>
+            </div>
+        </div>
+        <!-- List Blogs Section -->
+         <div class="h-fit w-full px-4">
+            <p class="h-fit w-full py-2 px-4 text-white text-lg uppercase font-semibold bg-sageGreenD rounded">All Blog's</p>
+            <div class="h-fit w-full py-2 flex flex-col gap-3 flex-shrink-0 blogs">
+                <div class="h-fit w-full flex items-center gap-4 py-4 px-2 border-2 border-sageGreenM">
+                    <p class="h-fit w-fit font-semibold text-xl">1.</p>
+                    <p class="h-fit w-9/12 text-xl">h</p>
+                    <a class="h-fit w-fit text-xlfont-semibold" href="#">Goto</a>
+                </div>
+                <div class="h-fit w-full flex items-center gap-4 py-4 px-2 border-2 border-sageGreenM">
+                    <p class="h-fit w-fit font-semibold text-xl">1.</p>
+                    <p class="h-fit w-9/12 text-xl">Fundamentals of Python programming</p>
+                    <a class="h-fit w-fit text-xlfont-semibold border-2 border-sageGreenM" href="#">Goto</a>
+                </div>
+            </div>
+         </div>
+    </div> 
+    <!-- <div class="text-2xl text-red-300 pp">Hiii</div> -->
     <script>
         function getData() {
             fetch('http://localhost:3000/blogs', {
@@ -20,7 +64,16 @@
                 return val.json();
             })
             .then((val) => {
-                document.getElementsByClassName('pp')[0].innerHTML = JSON.stringify(val);
+                var str = ''
+                for(let i = 0; i < val.length; i++)
+                {
+                    str += `<div class="h-fit w-full flex items-center gap-4 py-4 px-2 border-2 border-sageGreenM">
+                        <p class="h-fit w-fit font-semibold text-xl">${i+1}</p>
+                        <p class="h-fit w-9/12 text-xl">${val[i].title}</p>
+                        <a class="h-fit w-fit text-xlfont-semibold hover:underline" href="#">Goto</a>
+                    </div>`
+                }
+                document.getElementsByClassName('blogs')[0].innerHTML = str;
             })
         }
         getData();
