--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Insightful Ink is a Blog creation wesite, here you can create, read, update and do alot of things..." >
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -56,8 +57,8 @@
                 var str = ''
                 for(let i = 0; i < val.length; i++)
                 {
-                    str += `<div class="h-fit w-full flex items-center gap-4 py-4 px-2 border-2 border-sageGreenM">
-                        <p class="h-fit w-fit font-semibold text-xl">${i+1}</p>
+                    str += `<div class="h-fit w-full flex items-center gap-4 py-4 px-2 shadow-md shadow-sageGreenM">
+                        <p class="h-fit w-fit font-semibold text-xl">${val[i].id}</p>
                         <p class="h-fit w-9/12 text-xl">${val[i].title}</p>
                         <a class="h-fit w-fit text-xlfont-semibold hover:underline" href="#">Goto</a>
                     </div>`
@@ -90,7 +91,13 @@
                 return val.json()
             })
             .then((val) => {
-                alert(val.message)
+                var str = ''
+                str += `<div class="h-fit w-full flex items-center gap-4 py-4 px-2 shadow-md shadow-sageGreenM">
+                    <p class="h-fit w-fit font-semibold text-xl">${id}</p>
+                    <p class="h-fit w-9/12 text-xl">${title}</p>
+                    <a class="h-fit w-fit text-xlfont-semibold hover:underline" href="#">Goto</a>
+                </div>`
+                document.getElementsByClassName('blogs')[0].innerHTML += str;
             })
         }
     </script>
